# acorn-adfs

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DISASSEMBLY.md  GLOSSARY.md  README.md  README.md.j2  acornaeology.json  generate_readme.py  pyproject.toml
.github/workflows/: verify.yml
docs/: disc-id-generation.md
src/disasm_tools/: cli.py  lint.py  mos6502.py  paths.py  promote.py  verify.py
tools/: analyse_uncommented.py  basic_blocks.py  extract_jgh_comments.py  extract_multitarget_symbols.py  find_duplicate_comments.py  generate_labels_from_symbols.py  import_hoglet_labels.py  import_multitarget_labels.py  label_consistency_audit.md  label_context.py  remove_duplicate_comments.py  sub_calling_conv_audit.md  sub_context.py  suggest_comments.py  wksp_label_audit.md  wksp_label_context.py
versions/adfs-1.30/: ANNOTATION_PROGRESS.md  LABEL_RENAME_PROGRESS.md  REVIEW_PROGRESS.md
versions/adfs-1.30/disassemble/: disasm_adfs_130.py
versions/adfs-1.30/output/: adfs-1.30.asm  adfs-1.30.json
versions/adfs-1.30/rom/: rom.json
